tests/files/lexer_tests/should_fail/084.cmdr
//Should not parse since no semicolon
timeout 40000 echo